05-ingress/manifests/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
   - host: nginx.local
     http:
      paths:
       - path: /
         pathType: Prefix
         backend:
          service:
            name: nginx-service
            port:
             number: 80
